[tool.poetry]
name = "hippunfold_deps"
version = "0.5.0"
description = "Dependencies for HippUnfold"
authors = ["Jordan DeKraker & Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
batchgenerators = "0.21"
nnunet-inference-on-cpu-and-gpu = "1.6.6"
numpy = "1.21.2"
astropy = "^4.0,<=4.3.1"
pandas = "^1.2.0,<=1.3.0"
nibabel = "^3.2.1"
scipy = "1.7.1"
nilearn = "^0.8.1"
seaborn = "^0.11.2"
scikit-fmm = "^2022.03.26"
simpleitk = "2.0.2"
matplotlib = "3.4.2"
torch = "1.10.0"
naturalneighbor = "^0.2.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
